//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "backend" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table User {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  isActive Boolean [not null, default: false]
  isEmailVerified Boolean [not null, default: false]
  emailVerification EmailVerification
  passwordReset PasswordReset
  refreshToken RefreshToken [not null]
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table EmailVerification {
  id String [pk]
  userId String [unique, not null]
  code String [not null]
  expiresAt DateTime [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table PasswordReset {
  id String [pk]
  userId String [unique, not null]
  code String [not null]
  expiresAt DateTime [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table RefreshToken {
  id String [pk]
  token String [unique, not null]
  userId String [not null]
  user User [not null]
  expiresAt DateTime [not null]
  deviceId String [unique, not null]
  deviceName String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  USER
  ADMIN
}

Ref: EmailVerification.userId - User.id [delete: Cascade]

Ref: PasswordReset.userId - User.id [delete: Cascade]

Ref: RefreshToken.userId > User.id [delete: Cascade]